tests/src/frontend/syntax/invalid/mistake_const.sk
fun main(): String {
  const myint = 10;
}
